fixed the color contrast issue

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -425,3 +425,8 @@ a.ogp-card__link--unset:hover {
     margin-right: -2rem;
 }
 }
+
+/** Buttons on Bussiness Standard Sub-Pages **/
+.usa-button--accent-cool { 
+    background-color: #0081a1;
+}
